--- a/galeria.html
+++ b/galeria.html
@@ -290,13 +290,13 @@
                     </h6>
                     <hr class="deep-orange accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <i class="fa fa-home mr-3 fa-lg"></i> Jilotepec, CP 54240, MEXICO</p>
+                        <i class="fa fa-home mr-3 fa-lg"></i> MEXICO</p>
                     <p>
                         <i class="fa fa-envelope mr-3 fa-lg"></i> BigAuto@hotmail.com</p>
                     <p>
-                        <i class="fa fa-phone mr-3 fa-lg"></i> + 477 55 55 21 18 89</p>
+                        <i class="fa fa-phone mr-3 fa-lg"></i> 55 55 55 55 55</p>
                     <p>
-                        <i class="fa fa-print mr-3 fa-lg"></i> + 477 285 789 159</p>
+                        <i class="fa fa-print mr-3 fa-lg"></i> 55 55 55 55 55</p>
                 </div>
             </div>
         </div>
